修正boston_housing中表述不准确的：问题4/8/9/12

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -404,7 +404,7 @@
     "\n",
     "max_depth = 1时，学习曲线收敛于较低的r2得分，说明存在较大的偏差，模型欠拟合；\n",
     "\n",
-    "max_depth = 6和10时，学习曲线收敛，但两条曲线的得分相差较大，说明存在较大的偏差，模型过拟合。"
+    "max_depth = 6和10时，学习曲线收敛，但两条曲线的得分相差较大，说明存在较大的方差，模型过拟合。"
    ]
   },
   {
@@ -516,15 +516,17 @@
    "metadata": {},
    "source": [
     "### 问题 8 - 回答：\n",
-    "K折交叉验证法，将数据集划分为k个大小相似的互斥子集，每次用（k-1）个子集的并集作为训练集，余下的那个子集作为测试集，这样可以获得k组训练/测试集，进行k次训练测试之后返回k个测试结果的均值。\n",
+    "K折交叉验证法，将数据集划分为k个大小相似的互斥子集，每次用（k-1）个子集的并集作为训练集，余下的那个子集作为测试集，这样可以获得k组训练/测试集，进行k次训练测试之后返回k个测试结果的均值。*【from 《机器学习》周志华 著】*\n",
+    "\n",
+    "**实际使用K-折交叉验证法，是将传入的训练集划分为k个子集，其中（k-1）个训练集和1个验证集，经过k次训练验证之后返回平均值。如果网格搜索中有m个参数，则需要经过(m * k）次训练/验证。**\n",
     "\n",
     "sklearn.model_selection.GridSearchCV方法中，设置cv参数可以设定K折交叉验证的K值大小。\n",
     "\n",
-    "`'cv_results_'`记录调参过程中所选择的参数和结果信息，以DataFrame的结构存储。\n",
+    "`'cv_results_'`记录调参过程中所选择的参数和结果信息，以**字典**的结构存储。\n",
     "\n",
-    "对于同样比例的训练/测试集，存在多种划分方式，如果不使用交叉验证，可能因为划分数据的方式不同，导致模型的评估结果会有差异。\n",
+    "对于同样比例的训练/验证集，存在多种划分方式，如果不使用交叉验证，可能因为划分数据的方式不同，导致模型的评估结果会有差异。\n",
     "\n",
-    "交叉验证可以获得K组训练/测试集，得到的是k次测试的平均值。这样得到的结果更稳定可靠。"
+    "交叉验证可以获得K组训练/验证集，得到的是k次测试的平均值。这样得到的结果更稳定可靠。"
    ]
   },
   {
@@ -664,7 +666,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 问题 9 - 回答："
+    "### 问题 9 - 回答：\n",
+    "最优模型的最大深度是4，与问题6的猜测一致。"
    ]
   },
   {
@@ -853,7 +856,7 @@
    "metadata": {},
    "source": [
     "### 问题 12 - 回答：\n",
-    "预测结果的波动在 ±4% ，模型比较健壮。"
+    "10次预测结果的平均值为$409,246.00，波动幅度在7.2% ，模型比较健壮。"
    ]
   },
   {
